Fix footer on smaller screens

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -3,8 +3,10 @@
 }
 
 footer {
-	margin-top: -40px;
-	height: 20px;
+	position: fixed;
+	bottom: 40px;
+	left: 50%;
+	transform: translateX(-50%);
 	color: white;
 	font-weight: bold;
 	font-size: 12pt;
